dropped some more columns

--- a/module-1/pandas-project/your-code/0. Data Cleaning.ipynb
+++ b/module-1/pandas-project/your-code/0. Data Cleaning.ipynb
@@ -9,20 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib as mp"
+    "import re\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### I downloaded and unzipped the .csv file on the same folder as the project notebook. In order to import it we need to set the **\"engine\"** argument of the **pd.read_csv** function to *\"python\"*."
+    "### I downloaded and unzipped the .csv file on the same folder as the project notebook. In order to read it we need to set the **\"engine\"** argument of the **pd.read_csv** function to *\"python\"*."
    ]
   },
   {
@@ -753,13 +754,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1232,7 +1226,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1349,53 +1345,297 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Come to think of it, there are still some columns that won't be really necessary for my analysis:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Case Number</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Injury</th>\n",
+       "      <th>Fatal</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Investigator or Source</th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>url</th>\n",
+       "      <th>original order</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016.09.18.c</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Minor injury to thigh</td>\n",
+       "      <td>N</td>\n",
+       "      <td>13h00</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Orlando Sentinel, 9/19/2016</td>\n",
+       "      <td>2016.09.18.c-NSB.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>5993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016.09.18.b</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>Chucky Luciano</td>\n",
+       "      <td>M</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Lacerations to hands</td>\n",
+       "      <td>N</td>\n",
+       "      <td>11h00</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Orlando Sentinel, 9/19/2016</td>\n",
+       "      <td>2016.09.18.b-Luciano.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>5992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016.09.18.a</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>M</td>\n",
+       "      <td>43</td>\n",
+       "      <td>Lacerations to lower leg</td>\n",
+       "      <td>N</td>\n",
+       "      <td>10h43</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Orlando Sentinel, 9/19/2016</td>\n",
+       "      <td>2016.09.18.a-NSB.pdf</td>\n",
+       "      <td>http://sharkattackfile.net/spreadsheets/pdf_di...</td>\n",
+       "      <td>5991</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "count    5768.000000\n",
-       "mean     1965.763176\n",
-       "std        62.025594\n",
-       "min         5.000000\n",
-       "25%      1944.000000\n",
-       "50%      1976.000000\n",
-       "75%      2004.000000\n",
-       "max      2016.000000\n",
-       "Name: Year, dtype: float64"
+       "    Case Number       Date  Year        Type Country     Area  \\\n",
+       "0  2016.09.18.c  18-Sep-16  2016  Unprovoked     USA  Florida   \n",
+       "1  2016.09.18.b  18-Sep-16  2016  Unprovoked     USA  Florida   \n",
+       "2  2016.09.18.a  18-Sep-16  2016  Unprovoked     USA  Florida   \n",
+       "\n",
+       "                           Location Activity            Name Sex  Age  \\\n",
+       "0  New Smyrna Beach, Volusia County  Surfing            Male   M   16   \n",
+       "1  New Smyrna Beach, Volusia County  Surfing  Chucky Luciano   M   36   \n",
+       "2  New Smyrna Beach, Volusia County  Surfing            Male   M   43   \n",
+       "\n",
+       "                     Injury Fatal   Time  Species  \\\n",
+       "0     Minor injury to thigh     N  13h00  Unknown   \n",
+       "1      Lacerations to hands     N  11h00  Unknown   \n",
+       "2  Lacerations to lower leg     N  10h43  Unknown   \n",
+       "\n",
+       "        Investigator or Source                       pdf  \\\n",
+       "0  Orlando Sentinel, 9/19/2016      2016.09.18.c-NSB.pdf   \n",
+       "1  Orlando Sentinel, 9/19/2016  2016.09.18.b-Luciano.pdf   \n",
+       "2  Orlando Sentinel, 9/19/2016      2016.09.18.a-NSB.pdf   \n",
+       "\n",
+       "                                                 url  original order  \n",
+       "0  http://sharkattackfile.net/spreadsheets/pdf_di...            5993  \n",
+       "1  http://sharkattackfile.net/spreadsheets/pdf_di...            5992  \n",
+       "2  http://sharkattackfile.net/spreadsheets/pdf_di...            5991  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_sharks[\"Year\"].describe()"
+    "clean_sharks.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Especifically the \"Name\", \"Investigator or Source\", \"pdf\", \"url\" and \"original order\". So, let's drop those too:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Case Number</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Injury</th>\n",
+       "      <th>Fatal</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016.09.18.c</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>M</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Minor injury to thigh</td>\n",
+       "      <td>N</td>\n",
+       "      <td>13h00</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016.09.18.b</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>M</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Lacerations to hands</td>\n",
+       "      <td>N</td>\n",
+       "      <td>11h00</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016.09.18.a</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>M</td>\n",
+       "      <td>43</td>\n",
+       "      <td>Lacerations to lower leg</td>\n",
+       "      <td>N</td>\n",
+       "      <td>10h43</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Case Number       Date  Year        Type Country     Area  \\\n",
+       "0  2016.09.18.c  18-Sep-16  2016  Unprovoked     USA  Florida   \n",
+       "1  2016.09.18.b  18-Sep-16  2016  Unprovoked     USA  Florida   \n",
+       "2  2016.09.18.a  18-Sep-16  2016  Unprovoked     USA  Florida   \n",
+       "\n",
+       "                           Location Activity Sex  Age  \\\n",
+       "0  New Smyrna Beach, Volusia County  Surfing   M   16   \n",
+       "1  New Smyrna Beach, Volusia County  Surfing   M   36   \n",
+       "2  New Smyrna Beach, Volusia County  Surfing   M   43   \n",
+       "\n",
+       "                     Injury Fatal   Time  Species  \n",
+       "0     Minor injury to thigh     N  13h00  Unknown  \n",
+       "1      Lacerations to hands     N  11h00  Unknown  \n",
+       "2  Lacerations to lower leg     N  10h43  Unknown  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_sharks = clean_sharks.drop([\"Name\", \"Investigator or Source\", \"pdf\", \"url\",\"original order\"], axis=1)\n",
+    "clean_sharks.head(3)"
+   ]
   },
   {
    "cell_type": "code",
