--- a/module-1/pandas-project/your-code/clean-database.ipynb
+++ b/module-1/pandas-project/your-code/clean-database.ipynb
@@ -12080,6 +12080,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 416,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unprovoked      3340\n",
+       "Provoked         441\n",
+       "Boat             200\n",
+       "Sea Disaster     152\n",
+       "Boating           42\n",
+       "Name: Type, dtype: int64"
+      ]
+     },
+     "execution_count": 416,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wdf9 = df_cleaning.copy()\n",
+    "\n",
+    "wdf9[\"Type\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
