--- a/module-1/pandas-project/your-code/Data cleaning.ipynb
+++ b/module-1/pandas-project/your-code/Data cleaning.ipynb
@@ -4117,11 +4117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies_byyear.to_csv('Shark movies.csv', index=True)"
+    "movies_byyear.to_csv('Shark movies.csv', index=False)"
    ]
   },
   {
