--- a/module-1/pandas-project/your-code/shark_attacks_project.ipynb
+++ b/module-1/pandas-project/your-code/shark_attacks_project.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1701,
+   "execution_count": 1751,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,7 @@
     "from re import sub\n",
     "import numpy\n",
     "from statistics import mean\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt"
+    "from matplotlib import pyplot"
    ]
   },
   {
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1702,
+   "execution_count": 1752,
    "metadata": {
     "scrolled": true
    },
@@ -259,7 +258,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 1702,
+     "execution_count": 1752,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1703,
+   "execution_count": 1753,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +286,7 @@
        "(25723, 24)"
       ]
      },
-     "execution_count": 1703,
+     "execution_count": 1753,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,18 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1704,
+   "execution_count": 1754,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/marta/.local/lib/python3.6/site-packages/IPython/core/displayhook.py:271: UserWarning: Output cache limit (currently 1000 entries) hit.\n",
-      "Flushing oldest 200 entries.\n",
-      "  'Flushing oldest {cull_count} entries.'.format(sz=sz, cull_count=cull_count))\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -322,7 +312,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 1704,
+     "execution_count": 1754,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1705,
+   "execution_count": 1755,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +338,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 1705,
+     "execution_count": 1755,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1706,
+   "execution_count": 1756,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +364,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1706,
+     "execution_count": 1756,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1707,
+   "execution_count": 1757,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +602,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 1707,
+     "execution_count": 1757,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1708,
+   "execution_count": 1758,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +711,7 @@
        "4  2018.06.04  2018.0           N"
       ]
      },
-     "execution_count": 1708,
+     "execution_count": 1758,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1709,
+   "execution_count": 1759,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1710,
+   "execution_count": 1760,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1711,
+   "execution_count": 1761,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +940,7 @@
        "(25723, 3)"
       ]
      },
-     "execution_count": 1711,
+     "execution_count": 1761,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1712,
+   "execution_count": 1762,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +970,7 @@
        "(5749, 3)"
       ]
      },
-     "execution_count": 1712,
+     "execution_count": 1762,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1713,
+   "execution_count": 1763,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1714,
+   "execution_count": 1764,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1096,7 @@
        "4  2018.06.04  2018           N"
       ]
      },
-     "execution_count": 1714,
+     "execution_count": 1764,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1715,
+   "execution_count": 1765,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1132,7 @@
        "(4123, 3)"
       ]
      },
-     "execution_count": 1715,
+     "execution_count": 1765,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1716,
+   "execution_count": 1766,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1224,7 @@
        "4  2018.06.04  2018           N"
       ]
      },
-     "execution_count": 1716,
+     "execution_count": 1766,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1717,
+   "execution_count": 1767,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1718,
+   "execution_count": 1768,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1277,7 @@
        "Name: Fatal (Y/N), dtype: int64"
       ]
      },
-     "execution_count": 1718,
+     "execution_count": 1768,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1719,
+   "execution_count": 1769,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1720,
+   "execution_count": 1770,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1721,
+   "execution_count": 1771,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1545,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 1721,
+     "execution_count": 1771,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1573,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1722,
+   "execution_count": 1772,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1723,
+   "execution_count": 1773,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1724,
+   "execution_count": 1774,
    "metadata": {},
    "outputs": [
     {
@@ -1767,15 +1757,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1725,
+   "execution_count": 1775,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1725-6d708067a222>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-1775-6d708067a222>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1725-6d708067a222>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    tiburon.hist(column=\"Fatal (Y/N)\", by \"Year\")\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1775-6d708067a222>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    tiburon.hist(column=\"Fatal (Y/N)\", by \"Year\")\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
