--- a/module-1/pandas-project/your-code/data-wrangling.ipynb
+++ b/module-1/pandas-project/your-code/data-wrangling.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Partiré de la hipótesis de que los hombres sufren menos ataques letales que las mujeres, frente a los tiburones, debido a su constitución y fuerza. "
+    "## Partiré de la hipótesis de que los hombres sufren menos ataques letales que las mujeres, frente a los tiburones, debido a su constitución y fuerza. \n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -329,7 +332,7 @@
     }
    ],
    "source": [
-    "#Hago un DataFrame con las columnas que necesito para demostrar mi hipótesis y otras que me interesas o usare en un futuro\n",
+    "#DataFrame de las columnas que necesito para demostrar mi hipótesis y otras que me interesas o usare en un futuro\n",
     "\n",
     "Shark_Edited = Shark[[\"Sex \",\"Age\",\"Fatal (Y/N)\",'Injury']]\n",
     "Shark_Edited.head()\n",
@@ -357,8 +360,8 @@
     }
    ],
    "source": [
-    "#Ahora hare la limpieza de datos del DataFrame\n",
-    "#Comprobando primero cuantos valores vacios tengo\n",
+    "#Limpieza de datos del DataFrame\n",
+    "\n",
     "\n",
     "Shark_Edited.isnull().sum()"
    ]
@@ -384,11 +387,11 @@
     }
    ],
    "source": [
-    "#Decido eliminar todos los valores vacíos de Sex,Fatal (Y/N) y Injury\n",
+    "#Elimino todos los valores vacíos de Sex,Fatal (Y/N) y Injury\n",
     "\n",
     "Shark_C = Shark_Edited.dropna(subset=['Fatal (Y/N)', 'Injury','Sex '])\n",
     "\n",
-    "#Y sustituir los valores vacíos de Age por unknown\n",
+    "#Y cambio los valores vacíos de Age por unknown\n",
     "\n",
     "Shark_C = Shark_C.fillna(\"unknown\")\n",
     "\n",
@@ -424,7 +427,7 @@
     }
    ],
    "source": [
-    "#Ahora voy a limpiar las columnas de Sex y Fatal (Y/N)\n",
+    "#Limmpio las columnas de Sex y Fatal (Y/N)\n",
     "print(set(Shark_C['Sex ']))\n",
     "display(Shark_C[\"Sex \"].value_counts())"
    ]
@@ -566,7 +569,7 @@
     }
    ],
    "source": [
-    "#Ahora reemplazare los atributos de las columnas Sex y Fatal (F/N) para que quede mas claro \n",
+    "#Reemplazo los atributos de las columnas Sex y Fatal (F/N) para que quede mas claro \n",
     "Shark_5['Fatal (Y/N)'] = Shark_5['Fatal (Y/N)'].map({'N': \"No\", 'Y': \"Yes\"})\n",
     "Shark_5['Sex '] = Shark_5['Sex '].map({'M': \"Male\", 'F': \"Female\"})"
    ]
@@ -707,7 +710,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Hago otro DataFrame con las columnas que voy a comparar\n",
+    "#HDataFrame con las columnas que voy a comparar\n",
     "S_Fatal = Shark_5[[\"Sex \",\"Fatal (Y/N)\"]]\n",
     "S_Fatal.head()\n",
     "S_Fatal.to_csv (\"shut.csv\")\n"
@@ -956,7 +959,7 @@
     }
    ],
    "source": [
-    "#Se puede apreciar que la hipótesis es falsa, ya que los hombres sufren mas ataques letales que las mujeres\n",
+    "#Se puede apreciar que la hipótesis no se cumple, ya que los hombres sufren mas ataques letales que las mujeres\n",
     "G_2 = Rel.plot.bar()\n",
     "G_2"
    ]
@@ -1231,7 +1234,7 @@
     }
    ],
    "source": [
-    "# A continuación se agruparan los datos de la columna Injury en dos grupos, Grave y Minor\n",
+    "# Agrupación de los datos de la columna Injury en dos grupos, Grave y Minor\n",
     "\n",
     "def severity_of_injuries (s):\n",
     "    s = str(s)\n",
