Análisis películas y especie con mayor tasa muerte/ataques terminado

--- a/module-1/pandas-project/your-code/Data cleaning.ipynb
+++ b/module-1/pandas-project/your-code/Data cleaning.ipynb
@@ -258,9 +258,9 @@
    "metadata": {},
    "source": [
     "## Hipótesis inicial: \n",
-    ">- De los ataques registrados: ¿Con el paso de los años se ha ido aumentando la tasa muerte/ataque? ¿En números totales: cómo han evolucionado los ataques y las muertes?\n",
-    ">- De los resultados obtenidos sobre la evolución de muertes, intentar encontrar una posible relación con la evolución de las películas sobre tiburones.\n",
-    ">- Intentar ver evolución fatal por especies\n",
+    ">- De los ataques registrados: ¿Con el paso de los años se ha ido aumentando la **tasa muerte/ataque**? ¿En números totales: cómo han evolucionado los **ataques** y las **muertes**?\n",
+    ">- De los resultados obtenidos sobre la evolución de muertes, intentar encontrar una posible **relación** con la evolución de las **películas sobre tiburones**.\n",
+    ">- Encontrar **especie con mayor tasa muerte/ataque**.\n",
     "        \n",
     "#### Para realizar mi análisis deberé tener los siguientes campos limpios:\n",
     ">- Year, Fatal, Species"
