--- a/module-1/pandas-project/your-code/clean-database.ipynb
+++ b/module-1/pandas-project/your-code/clean-database.ipynb
@@ -6970,7 +6970,7 @@
     "    elif \"canoeing\" in act or \"kayak\" in act or \"boat\" in act or \"rowing\" in act or \"overboard\" in act \\\n",
     "    or \"ship\" in act or \"sail\" in act:\n",
     "        return \"Boat\"\n",
-    "    elif \"unknown\" in act:\n",
+    "    elif \"unknown\" in act:act\n",
     "        return \"Unknown\"\n",
     "    else:\n",
     "        return \"Unknown\"\n",
