--- a/module-1/pandas-project/your-code/0. Data Cleaning.ipynb
+++ b/module-1/pandas-project/your-code/0. Data Cleaning.ipynb
@@ -1879,6 +1879,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now let's clean the \"Time\" column using some functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_timestr(time):\n",
+    "    t = time.lower()\n",
+    "    if len(re.findall('(morning)|(am)|(a.m)|(dawn)|(day)',t)) > 0: return \"10h00\"\n",
+    "    if len(re.findall('(afternoon)|(midday)|(noon)|(lunch)',t)) > 0: return \"14h00\"\n",
+    "    if len(re.findall('(evening)|(dusk)|(sunset)',t)) > 0: return \"20h00\"\n",
+    "    if len(re.findall('(night)|(pm)|(p.m.)|(dark)',t)) > 0: return \"00h00\"\n",
+    "    return t\n",
+    "           \n",
+    "clean_sharks[\"Time\"] = clean_sharks[\"Time\"].apply(clean_timestr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_time(time):\n",
+    "    t=re.findall('\\d+h\\d+',time)\n",
+    "    if len(t)>0: return str(t[0])\n",
+    "    return \"Unknown\"\n",
+    "\n",
+    "clean_sharks[\"Time\"] = clean_sharks[\"Time\"].apply(clean_time)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### And add a \"Time of day\" column:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1916,6 +1961,13 @@
     "test\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
