--- a/module-1/pandas-project/your-code/0. Data Cleaning.ipynb
+++ b/module-1/pandas-project/your-code/0. Data Cleaning.ipynb
@@ -1925,10 +1925,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Age range</th>\n",
+       "      <th>Injury</th>\n",
+       "      <th>Fatal</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Time of day</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Case Number</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Unprovoked</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>New Smyrna Beach, Volusia County</td>\n",
+       "      <td>Surfing</td>\n",
+       "      <td>M</td>\n",
+       "      <td>16</td>\n",
+       "      <td>12-17</td>\n",
+       "      <td>Minor injury to thigh</td>\n",
+       "      <td>N</td>\n",
+       "      <td>13h00</td>\n",
+       "      <td>1. Afternoon</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>2016.09.18.c</td>\n",
+       "      <td>18-Sep-16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Month  Year        Type Country     Area                          Location  \\\n",
+       "0      9  2016  Unprovoked     USA  Florida  New Smyrna Beach, Volusia County   \n",
+       "\n",
+       "  Activity Sex  Age Age range                 Injury Fatal   Time  \\\n",
+       "0  Surfing   M   16     12-17  Minor injury to thigh     N  13h00   \n",
+       "\n",
+       "    Time of day  Species   Case Number       Date  \n",
+       "0  1. Afternoon  Unknown  2016.09.18.c  18-Sep-16  "
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def time_day(time):\n",
+    "    if len(re.findall('\\d+h',time)) > 0:\n",
+    "        t=re.findall('\\d+h',time)[0][:-1]\n",
+    "        t=int(t)\n",
+    "        if (t >= 22) or (t < 7): return \"3. Night\"\n",
+    "        if 7 <= t < 12: return \"0. Morning\"\n",
+    "        if 12 <= t < 18: return \"1. Afternoon\"\n",
+    "        if 18 <= t < 22: return \"2. Evening\"\n",
+    "    return (\"Unknown\")\n",
+    "\n",
+    "clean_sharks[\"Time of day\"] = clean_sharks[\"Time\"].apply(time_day)\n",
+    "new_columns = ['Month', 'Year', 'Type', 'Country', 'Area', 'Location',\n",
+    "       'Activity', 'Sex', 'Age', 'Age range', 'Injury', 'Fatal', 'Time','Time of day', 'Species','Case Number', 'Date']\n",
+    "clean_sharks = clean_sharks[new_columns]\n",
+    "clean_sharks.head(1)\n"
+   ]
   },
   {
    "cell_type": "code",
