--- a/module-1/pandas-project/your-code/1. Data Analysis.ipynb
+++ b/module-1/pandas-project/your-code/1. Data Analysis.ipynb
@@ -753,7 +753,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To prove this I will need to import a new dataset that contains countries' populations by year from 1960 to 2016."
+    "To prove this I will need to import a new dataset that contains countries' populations by year from 1960 to 2016. The dataset can be found here: https://www.kaggle.com/gemartin/world-bank-data-1960-to-2016.\n",
+    "\n",
+    "I have saved the *csv* file on the same folder as these notebooks and will import it as a dataframe:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "world_pop = "
    ]
   }
  ],
