--- a/module-1/pandas-project/your-code/Shark-Analysis.ipynb
+++ b/module-1/pandas-project/your-code/Shark-Analysis.ipynb
@@ -3973,7 +3973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Importo la libreria de gráficos para mostrar de manera gráfica el resultado para comprobar mi hipótesis:"
+    "# 6. Importo la libreria de gráficos para mostrar de manera gráfica el resultado y comprobar mi hipótesis:"
    ]
   },
   {
@@ -4388,14 +4388,14 @@
    "source": [
     "# CONCLUSIÓN:\n",
     "\n",
-    "## En términos absolutos las mayores muertes por ataque de tiburones son por tiburones blancos mientras se hacen actividades de ocio en la playa"
+    "## En términos absolutos las mayores muertes por ataque de tiburones son producidas por tiburones blancos mientras se hacen actividades de ocio en la playa"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Para terminar de comprobar mi hipótesis necesito conocer los resultados en términos porcentuales:"
+    "# 7. Para terminar de comprobar mi hipótesis necesito conocer los resultados en términos relativos:"
    ]
   },
   {
