Markdown in progress

--- a/module-1/pandas-project/your-code/data-wrangling.ipynb
+++ b/module-1/pandas-project/your-code/data-wrangling.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pandas-project: Shark attacks\n",
+    "\n",
+    "**Hipótesis**\n",
+    "1. ¿Son los tiburones blancos la especie más agresiva?\n",
+    "2. ¿Son los tiburones blancos la especie más mortal para bañistas y surferos\n",
+    "3. ¿Son los tiburones grandes más mortales que los medianos o pequeños?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1742,52 +1754,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comenzamos con el **data wrangling**. En primer lugar, quiero ver todas las columnas de la base de datos ya que algunas no aparecen en el display. También otros datos, como la dimensión de la tabla o los valores nulos que aparecen en cada columna.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Case Number                  0\n",
-       "Date                         0\n",
-       "Year                         0\n",
-       "Type                         0\n",
-       "Country                     43\n",
-       "Area                       402\n",
-       "Location                   496\n",
-       "Activity                   527\n",
-       "Name                       200\n",
-       "Sex                        567\n",
-       "Age                       2681\n",
-       "Injury                      27\n",
-       "Fatal (Y/N)                 19\n",
-       "Time                      3213\n",
-       "Species                   2934\n",
-       "Investigator or Source      15\n",
-       "pdf                          0\n",
-       "href formula                 1\n",
-       "href                         3\n",
-       "Case Number.1                0\n",
-       "Case Number.2                0\n",
-       "original order               0\n",
-       "Unnamed: 22               5991\n",
-       "Unnamed: 23               5990\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sharks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5da14040a408>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msharks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msharks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0msharks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sharks' is not defined"
+     ]
     }
    ],
    "source": [
-    "#Comenzamos con el data wrangling. En primer lugar, quiero ver todas las columnas de la base de datos ya que algunas no aparecen en el display.\n",
     "sharks.columns\n",
-    "#Dimensión de la tabla\n",
     "sharks.shape\n",
-    "#Cantidad de valores nulos en cada columna\n",
     "sharks.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Borramos dos columnas que no contienen datos (1 y 2 sobre 5992) y no se sabe a qué se refieren (Unnamed 1 y Unnamed 2).\n"
    ]
   },
   {
@@ -1796,8 +1796,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Borramos dos columnas que no contienen datos (1 y 2 sobre 5992) y no se sabe a qué se refieren (Unnamed 1 y Unnamed 2).\n",
     "sharks.drop(['Unnamed: 22','Unnamed: 23'], axis= 1, inplace= True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comprobar duplicated rows en las columnas indicadas"
    ]
   },
   {
@@ -3959,7 +3965,6 @@
     }
    ],
    "source": [
-    "#Comprobar duplicated rows en las columnas indicadas\n",
     "#shark_attacks[['Case Number','Case Number.1','Case Number.2']]\n",
     "\n",
     "sharks.drop(['Case Number.1','Case Number.2'], axis= 1, inplace= True)\n",
@@ -3970,15 +3975,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rename sex and species columns "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Rename sex and species columns \n",
+    "\n",
     "sharks.rename(index= str, columns= {'Sex ':'Sex','Species ':'Species','Fatal (Y/N)':'Fatal'}, inplace= True)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some random calculations"
    ]
   },
   {
@@ -4059,7 +4078,6 @@
     }
    ],
    "source": [
-    "#Some random calculations\n",
     "#Relation between fatal attacks and shark species\n",
     "sharks['Species'].loc[(sharks['Fatal']=='Y')]\n",
     "#Relation between types attacks and shark species\n",
@@ -4072,6 +4090,15 @@
     "sharks['Species'].loc[(sharks['Fatal']=='Y')]\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Moment of truth: Take decisions!**\n",
+    "\n",
+    "First: new dataframe with relevant columns that i'm going to use for my research\n"
    ]
   },
   {
@@ -5235,8 +5262,7 @@
     }
    ],
    "source": [
-    "#MOMENT OF TRUTH: TAKE DECISIONS!\n",
-    "#new dataframe with relevant columns that i'm going to use for my research\n",
+    "\n",
     "new_sharks = pd.DataFrame()\n",
     "new_sharks['Case Number'] = sharks['Case Number']\n",
     "new_sharks['Date'] = sharks['Date']\n",
@@ -6344,11 +6370,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Clean SPECIES**\n",
+    "1. Filter and drop null values"
+   ]
   },
   {
    "cell_type": "code",
@@ -7345,8 +7372,7 @@
     }
    ],
    "source": [
-    "#Clean SPECIES Columns.1\n",
-    "#Filter and drop null values\n",
+    "\n",
     "new_sharks['Species'].replace('nan','UNKNOWN',inplace= True)\n",
     "\n",
     "new_sharks= new_sharks.drop(new_sharks[new_sharks['Species']=='UNKNOWN'].index)\n",
@@ -7355,51 +7381,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Function to rename species"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "OTHERS                  1347\n",
-       "White Shark              442\n",
-       "BIG SHARK                414\n",
-       "Tiger Shark              194\n",
-       "Bull Shark               146\n",
-       "Blacktip Shark            85\n",
-       "Bronze Shark              47\n",
-       "MIDDLE SHARK              38\n",
-       "Raggedtooth Shark         36\n",
-       "SMALL SHARK               35\n",
-       "Mako Shark                33\n",
-       "Nurse Shark               30\n",
-       "Grey Shark                28\n",
-       "Wobbegong Shark           23\n",
-       "Hammerhead Shark          23\n",
-       "Lemon Shark               22\n",
-       "Blue Shark                20\n",
-       "Caribbean Reef Shark      17\n",
-       "Sand Shark                16\n",
-       "Dusky Shark                9\n",
-       "Angel Shark                5\n",
-       "Galapagos Shark            3\n",
-       "Porbeagle Shark            3\n",
-       "Silky Shark                2\n",
-       "Basking Shark              2\n",
-       "Broadnose Shark            1\n",
-       "Name: Species, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'new_sharks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-51924fb9889b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m\"OTHERS\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m \u001b[0mnew_sharks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Species'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_sharks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Species'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcleanspecies\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m \u001b[0mnew_sharks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Species'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'new_sharks' is not defined"
+     ]
     }
    ],
    "source": [
-    "# Clean SPECIES Column.2\n",
-    "\n",
-    "\n",
     "def cleanspecies (shark):\n",
     "    shark = str(shark).lower()\n",
     "    if 'white' in shark:\n",
@@ -7460,6 +7465,13 @@
     "new_sharks['Species'] = new_sharks['Species'].apply(cleanspecies)\n",
     "new_sharks['Species'].value_counts()    \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Copy the database to operate here with species** "
    ]
   },
   {
@@ -7598,7 +7610,7 @@
     }
    ],
    "source": [
-    "#copy the database to operate here with species. It's going to be tough.\n",
+    "\n",
     "shark_species = new_sharks.copy()\n",
     "\n",
     "a = new_sharks['Species'] \n",
@@ -7661,6 +7673,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hyphotesis nº1: White sharks are the most deadly sharks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -7689,10 +7708,17 @@
     }
    ],
    "source": [
-    "#H1. White sharks are the most deadly sharks.\n",
+    "\n",
     "shark_species = shark_species.drop(shark_species[shark_species['Shark Sizes']=='OTHERS'].index)\n",
     "x = shark_species['Species'].loc[shark_species['Fatal']=='Y'].value_counts()\n",
     "x.plot.bar()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hyphotesis nº2. White sharks attacks are mostly to surfers and swimmers.\n"
    ]
   },
   {
@@ -7724,7 +7750,6 @@
     }
    ],
    "source": [
-    "#H2. White sharks attacks are mostly to surfers and swimmers.\n",
     "\n",
     "act = pd.DataFrame()\n",
     "def activities(x):\n",
@@ -7745,6 +7770,13 @@
     "#x = shark_species['Species'].loc[shark_species['Fatal']=='Y'].value_counts()\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hyphotesis nº3. Big sharks are both the most aggresive and deadly sharks.\n"
    ]
   },
   {
@@ -7820,7 +7852,6 @@
     }
    ],
    "source": [
-    "#H3. Big sharks are both the most aggresive and deadly sharks.\n",
     "shark_species['Shark Sizes'].value_counts()\n",
     "\n",
     "shark_sizes = pd.DataFrame()\n",
@@ -7834,15 +7865,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Export to CSV a clean version of the sharks dataset\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Export to CSV a clean version of the sharks dataset\n",
     "\n",
     "shark_species.to_csv('../sharkattack.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
